--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
+    "hidpi-canvas": "^1.0.10",
     "jquery": "^3.6.0",
     "kuan-vue-flip-clock": "^1.0.1",
     "mapv": "^2.0.62",
