--- a/package.json
+++ b/package.json
@@ -1,77 +1,35 @@
 {
-  "name": "transitnet-vue",
-  "version": "0.1.0",
+  "name": "vue3-demo",
+  "version": "0.0.0",
   "private": true,
-  "vueCompilerOptions": {
-    "target": 2.6
-  },
   "scripts": {
-    "dev": "vue-cli-service serve --mode development",
-    "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build --mode production",
-    "package": "vue-cli-service build --mode production",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@turf/point-to-line-distance": "^6.5.0",
+    "@element-plus/icons-vue": "^2.1.0",
     "@turf/turf": "^6.5.0",
-    "@vue/compiler-dom": "^3.2.45",
-    "axios": "^0.24.0",
-    "core-js": "^3.6.5",
-    "echarts": "^5.2.2",
-    "element-ui": "^2.15.6",
-    "hidpi-canvas": "^1.0.10",
-    "jquery": "^3.6.0",
+    "axios": "^1.3.5",
+    "echarts": "^5.4.2",
+    "element-plus": "^2.3.2",
+    "jquery": "^3.6.4",
     "kuan-vue-flip-clock": "^1.0.1",
-    "mapv": "^2.0.62",
-    "module": "^1.2.5",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^10.2.0",
-    "vue": "^2.6.11",
-    "vue-baidu-map": "^0.21.22",
-    "zrender": "^5.3.0"
+    "sass": "^1.61.0",
+    "unplugin-auto-import": "^0.15.2",
+    "unplugin-icons": "^0.16.1",
+    "unplugin-vue-components": "^0.24.1",
+    "vite-plugin-inspect": "^0.7.19",
+    "vue": "^3.2.47",
+    "vue-cli": "^2.9.6",
+    "vue-router": "^4.1.6",
+    "zrender": "^5.4.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/runtime-dom": "latest",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-loader": "^1.0.1",
-    "vue-router": "^3.2.0",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.46.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {
-      "generator-star-spacing": "off",
-      "no-tabs": "off",
-      "no-unused-vars": "off",
-      "no-console": "off",
-      "no-irregular-whitespace": "off",
-      "no-debugger": "off"
-    },
-    "globals": {
-      "BMap": true,
-      "mapv": true
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "vite": "^4.1.4"
+  }
 }
