--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@turf/turf": "^6.5.0",
-    "axios": "^1.3.5",
+    "axios": "^1.3.6",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.2",
     "jquery": "^3.6.4",
@@ -22,6 +22,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite-plugin-inspect": "^0.7.19",
     "vue": "^3.2.47",
+    "vue-axios": "^3.5.2",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.1.6",
     "zrender": "^5.4.3"
