--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,3 @@
 NODE_ENV=production
 BASE_URL=/
-VUE_APP_ENV=production
-VUE_APP_ENV_TIP= 后端使用本地服务
-VUE_APP_SERVER_ADDR=http://sheng.whu.edu.cn
-VUE_APP_SERVER_URL_BASE=http://sheng.whu.edu.cn/bus/api
+VITE_SERVER_ADDR=http://sheng.whu.edu.cn/bus
