--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.3.2",
     "jquery": "^3.6.4",
     "kuan-vue-flip-clock": "^1.0.1",
+    "leaflet": "^1.9.4",
     "sass": "^1.61.0",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-icons": "^0.16.1",
