--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "unplugin-auto-import": "^0.15.2",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
+    "v-tooltip": "^2.1.3",
     "vite-plugin-inspect": "^0.7.19",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
